--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.ballin {
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  max-width: 500px;
+}
